# Burette

./: .gitignore  .npmrc  AGENTS.md  DESIGN.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vendor-assets.lock.json  vite.config.ts
App/: BurreteApp.swift  BurreteUpdater.swift  ContentView.swift  DocumentViewer.swift  Info.plist  MoleculeViewerScene.swift  MoleculeViewerWindowController.swift  MolstarQuickLookApp.swift
Burrete.xcodeproj/: project.pbxproj
MolstarQuickLook.xcodeproj/: project.pbxproj
PreviewExtension/: Info.plist  MoleculeGridPreview.swift  PreviewViewController.swift  (+2 more)
apps/desktop/src-tauri/: AppMetadata.plist  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: burrete.toml
apps/desktop/src-tauri/src/: app_menu.rs  burrete_cli.rs  config.rs  lib.rs  main.rs  menu.rs  open_target.rs  path_utils.rs  quick_look.rs  startup.rs  state.rs  tray.rs  watcher.rs
apps/desktop/src-tauri/src/commands/: documents.rs  fs_actions.rs  mod.rs  preview_cache.rs  quicklook.rs  search.rs  settings.rs  shell.rs  shell_install.rs  startup.rs  updater.rs  window.rs  workspace_store.rs
apps/desktop/src-tauri/src/molecule/: formats.rs  mod.rs
apps/desktop/src-tauri/src/preview/: formats.rs  mod.rs  runtime.rs  runtime_grid.rs  runtime_utils.rs  runtime_viewer.rs  xyz.rs  xyzrender.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/permissions/: burrete.toml
src-tauri/src/: lib.rs
(+208 files in other folders)
