[package]
name = "burrete"
version = "0.10.24"
description = "Tauri/Rust shell for local molecular previews"
authors = ["Burrete"]
edition = "2021"

[lib]
name = "burrete_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
